
public interface Notificacao {
    void enviar(String destinatario, String mensagem);
}
