@startuml Factory Method - Sistema de Notificacoes (App 2 - OCP)

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

note as OCP
  <b>OCP aplicado:</b>
  WhatsAppNotificacao e WhatsAppFactory
  foram adicionadas SEM modificar
  nenhuma classe existente.
end note

interface Notificacao {
    + enviar(destinatario: String, mensagem: String): void
}

class EmailNotificacao {
    + enviar(destinatario: String, mensagem: String): void
}

class SmsNotificacao {
    + enviar(destinatario: String, mensagem: String): void
}

class PushNotificacao {
    + enviar(destinatario: String, mensagem: String): void
}

class WhatsAppNotificacao <<new>> {
    + enviar(destinatario: String, mensagem: String): void
}

abstract class NotificacaoFactory {
    + {abstract} criarNotificacao(): Notificacao
    + notificar(destinatario: String, mensagem: String): void
}

class EmailFactory {
    + criarNotificacao(): Notificacao
}

class SmsFactory {
    + criarNotificacao(): Notificacao
}

class PushFactory {
    + criarNotificacao(): Notificacao
}

class WhatsAppFactory <<new>> {
    + criarNotificacao(): Notificacao
}

Notificacao <|.. EmailNotificacao
Notificacao <|.. SmsNotificacao
Notificacao <|.. PushNotificacao
Notificacao <|.. WhatsAppNotificacao

NotificacaoFactory <|-- EmailFactory
NotificacaoFactory <|-- SmsFactory
NotificacaoFactory <|-- PushFactory
NotificacaoFactory <|-- WhatsAppFactory

EmailFactory ..> EmailNotificacao : <<creates>>
SmsFactory ..> SmsNotificacao : <<creates>>
PushFactory ..> PushNotificacao : <<creates>>
WhatsAppFactory ..> WhatsAppNotificacao : <<creates>>

NotificacaoFactory ..> Notificacao : <<uses>>

@enduml
